--- a/App/myapp/package.json
+++ b/App/myapp/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
     "react-icons": "^4.7.1",
+    "react-input-checkbox": "^1.1.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.3.2",
