--- a/App/myapp/package.json
+++ b/App/myapp/package.json
@@ -10,12 +10,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "cdbreact": "^1.5.4",
     "mdb-react-ui-kit": "^5.1.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.42.1",
     "react-icons": "^4.7.1",
+    "react-input-checkbox": "^1.1.0",
+    "react-parallax": "^3.5.1",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.3.2",
