--- a/App/myapp/package.json
+++ b/App/myapp/package.json
@@ -21,6 +21,7 @@
     "react-input-checkbox": "^1.1.0",
     "react-parallax": "^3.5.1",
     "react-router-dom": "^5.3.4",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-scroll-parallax": "^3.3.2",
     "web-vitals": "^2.1.4"
