--- a/App/myapp/package.json
+++ b/App/myapp/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@mui/material": "^5.11.6",
+    "@react-oauth/google": "^0.6.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +18,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
+    "react-facebook": "^9.0.12",
     "react-hook-form": "^7.43.0",
     "react-icons": "^4.7.1",
     "react-input-checkbox": "^1.1.0",
