--- a/App/myapp/package.json
+++ b/App/myapp/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.5",
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@mui/material": "^5.11.6",
+    "@paypal/react-paypal-js": "^7.8.2",
     "@react-oauth/google": "^0.6.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
